--- a/force-app/main/default/lwc/cv_MyResumeHeader/cv_MyResumeHeader.html
+++ b/force-app/main/default/lwc/cv_MyResumeHeader/cv_MyResumeHeader.html
@@ -26,14 +26,14 @@
                         </a>
                     </li>
                     <li class="slds-var-m-bottom_small">
-                        <span>
+                        <span class="link">
                             <lightning-icon icon-name="utility:event" alternative-text="Birth Date" size="x-small" title="Date of birth"
                                 class="slds-var-m-right_small"></lightning-icon>
                             {userDetails.BIRTHDATE}
                         </span>
                     </li>
                     <li class="slds-var-m-bottom_small">
-                        <span>
+                        <span class="link">
                             <lightning-icon icon-name="utility:checkin" alternative-text="Address" size="x-small" title="Address"
                                 class="slds-var-m-right_small"></lightning-icon>
                             {userDetails.ADDRESS}
