Manual dom implemented

--- a/force-app/main/default/lwc/cv_MyResumeSummary/cv_MyResumeSummary.html
+++ b/force-app/main/default/lwc/cv_MyResumeSummary/cv_MyResumeSummary.html
@@ -2,7 +2,9 @@
     <section>
         <h2 class="section_heading slds-var-p-bottom_medium">{details.HEADING}</h2>
         <div>
-            <p class="font16">{details.DESCRIPTION}</p>
+            <p class="font16">
+                <span class="manualContent" lwc:dom="manual"></span>
+            </p>
         </div>
     </section>
 </template>
